added google adsense code

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3269788102375076"
+     crossorigin="anonymous"></script>
     <title>Portfolio Website-Muneeb</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -22,7 +24,7 @@
   <body>
     <nav class="navbar navbar-expand-lg fixed-top navbarScroll" >
       <div class="container">
-        <a class="navbar-brand" href="#" style="color: white;">Muneeb</a>
+        <a class="navbar-brand" href="#" style="color: white;">Muneeb.M</a>
         <button
           class="navbar-toggler"
           type="button"
